# my-jarvis-backend

./: .gitignore  Dockerfile  Makefile  Notes.txt  fuzzy_test.py  livekit.toml  pyproject.toml
src/: agent.py  datetime_tool.py  fuzzy_search.py  google_calendar_tool.py  google_tasks_tool.py  sncf_tool_mcp_client.py
